fix overflow

--- a/src/components/module-tendering/components/create-proposal/style.scss
+++ b/src/components/module-tendering/components/create-proposal/style.scss
@@ -1,5 +1,13 @@
 .createProposal {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
   margin: auto;
+
+  &_container {
+    flex-grow: 1;
+    overflow: auto;
+  }
 
   &_section {
     max-width: 700px;
